--- a/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
@@ -54,6 +54,7 @@
     <spring.wssecurity.version>2.4.0.RELEASE</spring.wssecurity.version>
     <spring.wssupport.version>2.4.0.RELEASE</spring.wssupport.version>
     <spring.ws.version>2.4.0.RELEASE</spring.ws.version>
+    <assertj.version>3.9.1</assertj.version>
     <xmlunit.version>1.6</xmlunit.version>
     <mockito.version>1.10.19</mockito.version>
     <apache.wss4j.version>1.6.19</apache.wss4j.version>
@@ -356,6 +357,12 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>${assertj.version}</version>
         <scope>test</scope>
       </dependency>
 
