FLEX-4633 ~ Increases time to live and max connections

--- a/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
+++ b/osgp/platform/osgp-adapter-domain-core/src/main/resources/osgp-adapter-domain-core.properties
@@ -109,8 +109,8 @@ jms.common.domain.to.ws.requests.queue=ws-core.1_0.domain-core.1_0.requests
 jms.common.domain.to.ws.requests.explicit.qos.enabled=true
 # Set delivery persistent
 jms.common.domain.to.ws.requests.delivery.persistent=true
-# Set Time to live in ms (600000 = 10 min)
-jms.common.domain.to.ws.requests.time.to.live=600000
+# Set Time to live in ms (3600000 = 1 hour)
+jms.common.domain.to.ws.requests.time.to.live=3600000
 
 # --- REDELIVERY POLICY ---
 # Set initial redelivery delay in ms (60000 = 1 min)
