--- a/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
+++ b/osgp/platform/osgp-core/src/main/resources/osgp-core.properties
@@ -119,17 +119,6 @@ jms.outgoing.protocol.responses.delivery.persistent=true
 jms.outgoing.protocol.responses.time.to.live=3600000
 
 # =========================================================
-# ===   JMS Settings: Protocol Logging Requests         ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
-jms.incoming.protocol.log.item.requests.queue=osgp.logging.protocol
-
-# JMS Settings for receiving Protocol Logging Requests
-jms.incoming.protocol.log.item.requests.concurrent.consumers=2
-jms.incoming.protocol.log.item.requests.max.concurrent.consumers=10
-
-# =========================================================
 # ===   SCHEDULING CONFIG                               ===
 # =========================================================
 scheduling.scheduled.tasks.cron.expression=0 */5 * * * *
@@ -145,14 +134,14 @@ jms.get.power.usage.history.request.time.to.live=3600000
 max.retry.count=3
 
 # =========================================================
-# ===   JMS Settings: Dlms Log Item Requests            ===
+# ===   JMS Settings: Log Item Requests                 ===
 # =========================================================
 
 # --- DEFAULT DESTINATION ---
-jms.dlms.log.item.requests.queue=osgp.logging.protocol
+jms.log.item.requests.queue=osgp.logging.protocol
 
 # --- DELIVERY OPTIONS ---
-jms.dlms.log.item.requests.time.to.live=3600000
+jms.log.item.requests.time.to.live=3600000
 
 # --- DELIVERY OPTIONS ---
 # Set explicitQosEnabled to true to enable the use of deliveryMode, priority, and timeToLive
