--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
@@ -157,7 +157,8 @@ jms.iec61850.log.item.requests.queue=osgp.logging.protocol
 # --- DELIVERY OPTIONS ---
 jms.iec61850.log.item.requests.explicit.qos.enabled=true
 jms.iec61850.log.item.requests.delivery.persistent=true
-jms.iec61850.log.item.requests.time.to.live=180000
+# Set Time to live in ms (86400000 = 1 day)
+jms.iec61850.log.item.requests.time.to.live=86400000
 jms.iec61850.log.item.requests.receive.timeout=10
 
 # =========================================================
