--- a/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
+++ b/osgp/protocol-adapter-oslp/osgp-adapter-protocol-oslp-elster/src/main/resources/osgp-adapter-protocol-oslp-elster.properties
@@ -147,8 +147,8 @@ jms.oslp.log.item.requests.queue=osgp.logging.protocol
 jms.oslp.log.item.requests.explicit.qos.enabled=true
 # Set delivery persistent
 jms.oslp.log.item.requests.delivery.persistent=true
-# Set Time to live in ms (180000 = 3 minutes)
-jms.oslp.log.item.requests.time.to.live=180000
+# Set Time to live in ms (86400000 = 1 day)
+jms.oslp.log.item.requests.time.to.live=86400000
 # Set receive timeout
 jms.oslp.log.item.requests.receive.timeout=10
 
