--- a/integration-tests/cucumber-tests-execution/pom.xml
+++ b/integration-tests/cucumber-tests-execution/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.opensmartgridplatform</groupId>
     <artifactId>parent-integration-tests</artifactId>
-    <version>4.34.0-SNAPSHOT</version>
+    <version>4.34.0</version>
     <relativePath>../parent-integration-tests/pom.xml</relativePath>
   </parent>
 
