--- a/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
+++ b/osgp/protocol-adapter-dlms/parent-pa-dlms/pom.xml
@@ -13,7 +13,7 @@
 
   <artifactId>parent-pa-dlms</artifactId>
   <groupId>org.opensmartgridplatform</groupId>
-  <version>4.34.0-SNAPSHOT</version>
+  <version>4.34.0</version>
   <packaging>pom</packaging>
   <name>parent-pa-dlms</name>
   <!-- Description, Organization, Licences, URL and Distribution Management 
@@ -42,10 +42,10 @@
 
   <properties>
     <module.baseUri>${project.baseUri}/../</module.baseUri>
-    <osgp.version>4.34.0-SNAPSHOT</osgp.version>
-    <osgp.dlms.version>4.34.0-SNAPSHOT</osgp.dlms.version>
-    <osgp.shared.version>4.34.0-SNAPSHOT</osgp.shared.version>
-    <osgp.jasper-interface.version>4.34.0-SNAPSHOT</osgp.jasper-interface.version>
+    <osgp.version>4.34.0</osgp.version>
+    <osgp.dlms.version>4.34.0</osgp.dlms.version>
+    <osgp.shared.version>4.34.0</osgp.shared.version>
+    <osgp.jasper-interface.version>4.34.0</osgp.jasper-interface.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring.version>4.3.18.RELEASE</spring.version>
