--- a/osgp/platform/osgp-adapter-ws-tariffswitching/pom.xml
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/pom.xml
@@ -149,6 +149,12 @@
       <artifactId>hibernate-validator</artifactId>
     </dependency>
 
+    <!-- Flyway (DB Migration) -->
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
