--- a/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
+++ b/osgp/platform/osgp-adapter-ws-tariffswitching/src/main/resources/osgp-adapter-ws-tariffswitching.properties
@@ -1,4 +1,7 @@
 #Database Configuration
+db.username=osp_admin
+db.password=1234
+
 db.readonly.username=osgp_read_only_ws_user
 db.readonly.password=1234
 
@@ -8,7 +11,11 @@ db.protocol=jdbc:postgresql://
 
 db.host=localhost
 db.port=5432
-db.name=osgp_core
+db.name=osgp_adapter_ws_tariffswitching
+
+db.host.core=localhost
+db.port.core=5432
+db.name.core=osgp_core
 
 db.min_pool_size=1
 db.max_pool_size=5
@@ -22,13 +29,15 @@ hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 
 #Flyway configuration
-flyway.initial.version=2014.001
-flyway.initial.description=Initial version PostgreSQL
+flyway.initial.version=20190121141300987
+flyway.initial.description=Added response data table
 flyway.init.on.migrate=true
 
 #EntityManager
 #Declares the base package of the entity classes
-entitymanager.packages.to.scan=org.opensmartgridplatform.domain.core.entities
+entitymanager.packages.to.scan=org.opensmartgridplatform.adapter.ws.tariffswitching.domain.entities,org.opensmartgridplatform.adapter.ws.domain.entities
+
+entitymanager.packages.to.scan.core=org.opensmartgridplatform.domain.core.entities
 
 jaxb2.marshaller.context.path.tariffswitching.adhocmanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.adhocmanagement
 jaxb2.marshaller.context.path.tariffswitching.schedulemanagement=org.opensmartgridplatform.adapter.ws.schema.tariffswitching.schedulemanagement
@@ -85,6 +94,10 @@ jms.tariffswitching.responses.delivery.persistent=true
 jms.tariffswitching.responses.time.to.live=3600000
 jms.tariffswitching.responses.receive.timeout=100
 
+# --- CONCURRENT CONSUMERS ---
+jms.tariffswitching.responses.concurrent.consumers=2
+jms.tariffswitching.responses.max.concurrent.consumers=10
+
 # --- REDELIVERY POLICY ---
 jms.tariffswitching.responses.maximum.redeliveries=3
 # Set redelivery delay in ms (60000 = 1 min)
@@ -122,3 +135,14 @@ jms.tariffswitching.logging.redelivery.delay=60000
 jms.tariffswitching.logging.maximum.redelivery.delay=300000
 jms.tariffswitching.logging.back.off.multiplier=2
 jms.tariffswitching.logging.use.exponential.back.off=true
+
+
+# =========================================================
+# SCHEDULING CONFIG
+# =========================================================
+
+## Production (every day at 10:00 AM) ->  0 0 10 * * ?
+## Test (every minute)                  ->  0 0/1 * * * ?
+tariffswitching.scheduling.job.cleanup.response.data.cron.expression=0 0/1 * * * ?
+tariffswitching.scheduling.job.cleanup.response.data.thread.count=1
+tariffswitching.scheduling.job.cleanup.response.data.retention.time.in.days=1
