--- a/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
+++ b/osgp/platform/osgp-adapter-ws-smartmetering/src/main/resources/osgp-adapter-ws-smartmetering.properties
@@ -105,7 +105,7 @@ jms.smartmetering.logging.queue=osgp.logging.ws
 web.service.notification.enabled=true
 web.service.notification.username=test-org
 web.service.notification.organisation=OSGP
-web.service.notification.application.name=SMART_METERS
+web.service.notification.application.name=
 
 #Paging
 paging.maximum.pagesize=30
