--- a/osgp/shared/shared/pom.xml
+++ b/osgp/shared/shared/pom.xml
@@ -183,6 +183,13 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- AssertJ-->
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- Micrometer -->
     <dependency>
       <groupId>io.micrometer</groupId>
