--- a/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
+++ b/osgp/protocol-adapter-iec61850/osgp-protocol-adapter-iec61850/src/main/resources/osgp-adapter-protocol-iec61850.properties
@@ -105,9 +105,11 @@ iec61850.default.longitude=5.291266
 # =========================================================
 # MESSAGING CONFIG
 # =========================================================
-
-# --- JMS Settings ---
-jms.activemq.broker.url=failover:(ssl://localhost:61617)
+#----------------------------------------------------------
+# jms.default
+#----------------------------------------------------------
+#jms.default.broker.url=failover:(ssl://localhost:61617)
+jms.default.broker.url=failover:(tcp://localhost:61616)
 
 jms.default.initial.redelivery.delay=10000
 jms.default.maximum.redeliveries=1
@@ -116,76 +118,36 @@ jms.default.redelivery.delay=30000
 jms.default.back.off.multiplier=1
 jms.default.use.exponential.back.off=false
 
-jms.activemq.connection.pool.block.if.session.pool.is.full=true
-jms.activemq.connection.pool.block.if.session.pool.is.full.timeout=-1
-jms.activemq.connection.pool.expiry.timeout=0
-jms.activemq.connection.pool.time.between.expiration.check.millis=-1
-jms.activemq.connection.pool.idle.timeout=30000
-jms.activemq.connection.send.timeout=0
-
-# =========================================================
-#  JMS Settings: Incoming IEC61850 Requests 
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.inbound.osgp.core.requests
+#----------------------------------------------------------
 jms.iec61850.requests.queue=protocol-iec61850.1_0.osgp-core.1_0.requests
-
-# --- CONCURRENT CONSUMERS ---
 jms.iec61850.requests.concurrent.consumers=25
 jms.iec61850.requests.max.concurrent.consumers=250
 
-# =========================================================
-#  JMS Settings: Outgoing IEC61850 Responses
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.outbound.osgp.core.responses
+#----------------------------------------------------------
 jms.iec61850.responses.queue=osgp-core.1_0.protocol-iec61850.1_0.responses
-
-# --- DELIVERY OPTIONS ---
-jms.iec61850.responses.explicit.qos.enabled=true
-jms.iec61850.responses.delivery.persistent=true
 jms.iec61850.responses.time.to.live=180000
-jms.iec61850.responses.receive.timeout=10
 
-# =========================================================
-# ===   JMS Settings: Log Item Requests            ===
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.outbound.log.item.requests
+#----------------------------------------------------------
 jms.iec61850.log.item.requests.queue=osgp.logging.protocol
-
-# --- DELIVERY OPTIONS ---
-jms.iec61850.log.item.requests.explicit.qos.enabled=true
-jms.iec61850.log.item.requests.delivery.persistent=true
 # Set Time to live in ms (86400000 = 1 day)
 jms.iec61850.log.item.requests.time.to.live=86400000
-jms.iec61850.log.item.requests.receive.timeout=10
 
-# =========================================================
-#  JMS Settings: Outgoing OSGP Core Requests
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.outbound.osgp.core.requests
+#----------------------------------------------------------
 jms.osgp.requests.queue=osgp-core.1_0.protocol-iec61850.1_0.requests
-
-# --- DELIVERY OPTIONS ---
-jms.osgp.requests.explicit.qos.enabled=true
-jms.osgp.requests.delivery.persistent=true
 jms.osgp.requests.time.to.live=180000
-jms.osgp.requests.receive.timeout=10
 
-# =========================================================
-#  JMS Settings: Incoming OSGP Core Responses
-# =========================================================
-
-# --- DEFAULT DESTINATION ---
+#----------------------------------------------------------
+# jms.inbound.osgp.core.responses
+#----------------------------------------------------------
 jms.osgp.responses.queue=protocol-iec61850.1_0.osgp-core.1_0.responses
-
-# --- CONCURRENT CONSUMERS ---
-jms.osgp.responses.concurrent.consumers=2
-jms.osgp.responses.max.concurrent.consumers=10
-# =========================================================
-
 
 
 # =========================================================
